<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
...

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navbarDivider"
        app:layout_constraintTop_toBottomOf="@+id/home_chatButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_scrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

...
        android:id="@+id/home_chatButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#6200ED"
        android:contentDescription="Chat Button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/home_notificationsBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat_icon"
        app:tint="#FFFFFF" />

...
