...
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/friends_profilePic"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/friends_addFriendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="Add Friend"
        app:layout_constraintEnd_toEndOf="parent"
...
